--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <div class="card">
       <h1>Bulut Üssü</h1>
       <p>Bu sayfa GitHub Pages üzerinde yayınlanan basit bir açılış sayfasıdır.</p>
+      <input id="csvUrl" type="url" placeholder="https://docs.google.com/spreadsheets/d/17Ke6Frgx34FDUKJrQ49e8Xu2qaZf0ACJgfOIGTbhkwo/edit?gid=0#gid=0" />
       <button id="fetchBtn">Verileri Getir</button>
       <p id="status" aria-live="polite"></p>
       <pre id="output">Hazır...</pre>
